@@ -1,4 +1,7 @@
 2012-10-16 yusei
+* Improve error handling on Workflow_statusModify. If divergence is solved by other user, then show a nice message.
+
+2012-10-16 yusei
 * Improve error handling on Workflow_statusModify. If requested transition is not available, then show a nice message.
 
 2012-9-12 yusei
